[package]
name = "ron-kms2"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "RustyOnions KMS (library-only) — scaffold"
repository = "https://example.invalid/RustyOnions"
publish = false

[lib]
name = "ron_kms2"
path = "src/lib.rs"

[features]
# Crypto algorithms (off by default in scaffold)
mlkem = []
mldsa = []
slhdsa = []
soft-seal = []
with-metrics = []

[dependencies]
# Intentionally empty for scaffold
