[package]
name = "ron-kms"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
with-metrics = ["dep:prometheus", "dep:once_cell"]
mlkem   = []
mldsa   = []
slhdsa  = []
soft-seal = []
pkcs11  = []

[dependencies]
ed25519-dalek = { version = "2", default-features = false, features = ["fast", "rand_core", "batch"] }
rand            = "0.8"
rand_core       = "0.6"
zeroize         = { version = "1.7", features = ["alloc"] }
thiserror       = "1"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
blake3          = "1"
parking_lot     = "0.12"
ahash           = "0.8"
prometheus      = { version = "0.14", optional = true }
once_cell       = { version = "1", optional = true }
time            = { version = "0.3", features = ["macros"] }
uuid            = { version = "1", features = ["v4", "serde"] }
anyhow          = "1"

[dev-dependencies]
hex = "0.4"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support","html_reports"] }

# Criterion benches need harness=false
[[bench]]
name = "sign_bench"
harness = false

[[bench]]
name = "verify_bench"
harness = false

[[bench]]
name = "batch_verify"
harness = false

[[bench]]
name = "parallel_throughput"
harness = false


# These are stubs for later (left as default test harness so they don't error)
# [[bench]]
# name = "encap_bench"
# harness = false
#
# [[bench]]
# name = "decap_bench"
# harness = false
