[package]
name = "ron-kms"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
with-metrics = ["dep:prometheus", "dep:once_cell"]

# Optional backends / algorithms
fast            = ["dep:ring"]     # ring sign/verify lane (feature-gated)
mlkem           = []
mldsa           = []
slhdsa          = []

# Soft-seal (RAM-only AEAD helpers)
# Only enables the AEAD crate; rand_core is already a non-optional dep.
soft-seal       = ["dep:chacha20poly1305"]

# Batch verify features
dalek-batch     = []                # toggles multiscalar batch path in our code
parallel-batch  = ["rayon", "dalek-batch"]

[dependencies]
# Default crypto backend (audit-friendly, pure Rust)
ed25519-dalek = { version = "2", default-features = false, features = ["fast", "rand_core", "batch"] }

rayon       = { version = "1.11", optional = true }

# Optional fast backend (feature-gated)
ring        = { version = "0.17", optional = true }

rand        = "0.8"
rand_core   = "0.6"
zeroize     = { version = "1.7", features = ["alloc"] }
thiserror   = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
blake3      = "1"
parking_lot = "0.12"
ahash       = "0.8"

# Metrics (feature-gated)
prometheus  = { version = "0.14", optional = true }
once_cell   = { version = "1", optional = true }

time        = { version = "0.3", features = ["macros"] }
uuid        = { version = "1", features = ["v4", "serde"] }
anyhow      = "1"

# Soft-seal AEAD (feature-gated)
chacha20poly1305 = { version = "0.10", features = ["std"], optional = true }

[dev-dependencies]
hex = "0.4"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support","html_reports"] }

# Criterion benches need harness=false
[[bench]]
name = "sign_bench"
harness = false

[[bench]]
name = "verify_bench"
harness = false

[[bench]]
name = "batch_verify"
harness = false

[[bench]]
name = "parallel_throughput"
harness = false

[[bench]]
name = "throughput_batch"
harness = false
