[package]
name = "ron-metrics"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80.0"
description = "RustyOnions observability library (+ tiny HTTP exposer)"

[features]
default = []
bus = ["dep:ron-bus"]                      # bridge ron-bus events -> metrics/health (optional)
otel = ["dep:opentelemetry", "dep:opentelemetry-otlp"]
tls = ["dep:tokio-rustls"]
uds = []

[dependencies]
axum = { version = "0.7.9", default-features = false, features = ["tokio", "http1", "http2", "json"] }
prometheus = "0.14"
tokio = { version = "1.47.1", features = ["rt-multi-thread","macros","net","signal","time","io-util"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
once_cell = "1.19"
tracing = "0.1"
http = "1.1"
tower = "0.4"


# optional
tokio-rustls = { version = "0.26.2", optional = true }
opentelemetry = { version = "0.23", optional = true }
opentelemetry-otlp = { version = "0.16", optional = true }
ron-bus = { path = "../ron-bus", optional = true }   # adjust path if your workspace differs

[dev-dependencies]
anyhow = "1.0"
# Hyper core + client
hyper = { version = "1.4", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "http1", "http2", "tokio", "client-legacy"] }
http-body-util = "0.1"
tracing-subscriber = "0.3"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
