[package]
publish = false

name = "naming"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_with = "3.8"
chrono = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
mime = "0.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
base64 = { workspace = true }
mime_guess = { workspace = true }
thiserror  = { workspace = true }         # if present
toml = { workspace = true }
workspace-hack = { workspace = true }

