[package]
name = "ron-policy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Declarative policy engine for RustyOnions (deny-by-default, quotas, geo, residency, reasons/obligations)"
repository = "https://example.invalid/RustyOnions"
authors = ["RustyOnions Contributors"]

[lib]
name = "ron_policy"
path = "src/lib.rs"

[features]
# Tight JSON/TOML parsing with #[serde(deny_unknown_fields)] everywhere.
strict = []
# Avoids time dependencies in core; enables std::time-based clock by default.
default = ["strict"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
bytes = "1.7"
once_cell = "1.19"
prometheus = "0.14"
regex = "1.10"
# Keep time minimal and deterministic: use std::time::SystemTime via our Clock trait (no chrono).
# If you later want richer time, add `time`/`chrono` behind a feature.

[dev-dependencies]
criterion = "0.5"
insta = { version = "1.39", features = ["json"] }
rand = "0.9"

[package.metadata.cargo-udeps.ignore]
normal = ["prometheus"]

[[bench]]
name = "eval_throughput"
harness = false
