[package]
name = "ron-proto"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
# MessagePack support toggled on by default (matches your svc crates pattern).
default = ["rmp"]
rmp = ["dep:rmp-serde"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rmp-serde = { workspace = true, optional = true }
