[package]
name = "ron-proto2"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
description = "DTO-only schemas for RustyOnions (scaffold)"

[lib]
path = "src/lib.rs"

[features]
default = ["serde"]
cbor = []
schemars = []

[dependencies]
serde = { version = "1", features = ["derive"] }
bytes = "1"
thiserror = "1"

[dev-dependencies]
serde_json = "1"

[package.metadata.ci]
# Non-functional markers to remind us this is a scaffold only.
