[package]
name = "ron-transport2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "RustyOnions transport library (TCP/TLS + optional Arti + optional QUIC) — scaffold only"
repository = "https://example.com/RustyOnions"

[lib]
name = "ron_transport2"
path = "src/lib.rs"

[features]
default = []
arti = []
quic = []

[dependencies]
# Intentionally minimal; real pins come from workspace once code lands.

[dev-dependencies]
# criterion = "0.5"
# loom = "0.7"
