# ryker — Cargo.toml (library-only). Fill with actual deps/features when coding.
[package]
name = "ryker"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Embedded actor & bounded mailbox runtime (library-only)"
repository = ""
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
default = ["metrics", "tracing", "amnesia"]
metrics = []
tracing = []
amnesia = []
loom = []
dev-cli = []
# pq-pass is intentionally omitted; PQ is N/A for ryker as a lib.

[package.metadata.docs.rs]
all-features = true

[dependencies]
# Populate later: small, audited set only.

[dev-dependencies]
criterion = "*"

