[package]
name = "ryker"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Embedded actor & bounded mailbox runtime for RustyOnions"
readme = "README.MD"
rust-version = "1.80"

[features]
default = ["metrics", "tracing", "amnesia"]
metrics = []
tracing = ["dep:tracing"]
amnesia = []
loom = []
dev-cli = []
# Enables a non-intrusive "tap" for benches to clone a receiver; off in prod.
bench_support = []

[dependencies]
tokio = { version = "1.47", features = ["macros", "rt", "time", "sync"] }
parking_lot = "0.12"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.9"
humantime = "2.1"
humantime-serde = "1.1"
once_cell = "1.19"
rand = "0.9"
anyhow = "1.0"
serde_json = "1.0"

# Optional tracing; enabled via feature above
tracing = { version = "0.1", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
serde_json = "1.0"
anyhow = "1.0"

[[bench]]
name = "enqueue"
harness = false

[[bench]]
name = "dequeue"
harness = false

[[bench]]
name = "batch"
harness = false

[lib]
doctest = false