[package]
name = "svc-admin"
version = "0.1.0"
edition = "2021"
description = "Admin-plane HTTP + SPA service for RON-CORE nodes"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata]
# See docs/IDB.md and docs/GOVERNANCE.MD for invariants and governance.

[lib]
name = "svc_admin"
path = "src/lib.rs"

[[bin]]
name = "svc-admin"
path = "src/bin/svc-admin.rs"

[features]
# Core deps (axum/tokio/serde) are always on; features toggle optional behavior.
default = []
tls = ["tokio-rustls"]        # TLS for serving HTTPS directly
otel = []                     # Optional OpenTelemetry exporters
passport = []                 # Optional passport/JWT validation mode

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TOML parsing (serde support is built-in; DO NOT enable a non-existent "serde" feature)
toml = "0.8"

# Tokio + friends (include `signal` for ctrl_c handling)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }

# HTTP stack (rustls-only; no native-tls)
axum = { version = "0.7.9", default-features = false, features = ["tokio", "http1", "http2", "json"] }
axum-extra = { version = "0.9", features = ["cookie"] }

tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }

prometheus = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-rustls = { version = "0.26", optional = true }
url = "2"

# --- Local auth building blocks (for auth.mode="local") ---
# Password hashing (Argon2id PHC strings)
argon2 = "0.5"
password-hash = "0.5"

# Cookie primitives (axum-extra cookie extractor/serializer depends on this)
cookie = "0.18"

# IMPORTANT: enable rand_core(0.6) OsRng for password-hash SaltString::generate
rand_core = { version = "0.6", features = ["getrandom"] }

# Session IDs / salts / randomness
rand = "0.9"

# Hex encoding for IDs (keeps logs + storage readable)
hex = "0.4"

# In-process locks (used widely across our project; keeps auth stores simple)
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
